update example ui

--- a/vue-example/index.html
+++ b/vue-example/index.html
@@ -9,20 +9,8 @@
     <link rel="shortcut icon" href="/assets/icons/icon-144x144.png" />
     <link rel="apple-touch-icon" href="/assets/icons/icon-152x152.png" />
 
-    <title>Vite Vue Typescript Template</title>
+    <title>Wembat Encryption Demo</title>
 
-    <script>
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker
-          .register("serviceworker.js")
-          .then(function (registration) {
-            console.log("Service worker registered successfully", registration);
-          })
-          .catch(function (err) {
-            console.log("Service worker registration failed: ", err);
-          });
-      }
-    </script>
   </head>
   <body>
     <div id="app"></div>
