--- a/backend/dashboard/index.html
+++ b/backend/dashboard/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.datatables.net/2.1.7/css/dataTables.bootstrap5.css" rel="stylesheet">
-    <title>Vite App</title>
+    <title>Wembat Dashboard</title>
   </head>
   <body>
     <div id="app"></div>
